--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "contacts",
-    "short_name": "contacts",
+    "name": "timur_harin",
+    "short_name": "timur_harin",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#hexcode",
