--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       - uses: erickzanardo/flutter-gh-pages@v7
         with:
-          basehref: /
+          baseHref: /
           
