--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   url_launcher: ^6.1.11
   flutter_launcher_icons: ^0.13.1
   auto_size_text: ^3.0.0
@@ -21,12 +20,21 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
 
-flutter_icons:
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/icon2.png"
+  min_sdk_android: 21 
   web:
     generate: true
     image_path: "assets/icons/icon2.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
+  macos:
+    generate: true
+    image_path: "assets/icons/icon2.png"
+
 
 flutter:
   uses-material-design: true
@@ -34,8 +42,6 @@ flutter:
     - assets/
     - assets/icons/
     - assets/images/
-
-  
 
   fonts:
    - family: JetBrainsMono
